<resources>
    <string name="app_name">Knapsack_test</string>
    <string name="enter_bag_weight">Enter bag weight.</string>
    <string name="enter_object_weight">Enter object weight.</string>
    <string name="enter_multiple_weight">Enter multiple Object weight using comma like 2,13,15</string>
    <string name="enter_object_value">Enter object value</string>
    <string name="multiple_val">Enter multiple Object value using comma like 2,13,15.</string>
    <string name="dummy_text">Value: 0</string>
    <string name="weight_value_wrong_input">Please enter same  number of object weight and value seprated with comma like (12,16,8)&amp; (14,18,6) </string>
    <string name="by_recursion">By Recursion</string>
    <string name="toolbar_text">Tenner Coding Challenge App</string>
    <string name="valid">Please enter valid number don\'t give input in decimal or special character as a input.</string>
</resources>