<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTop"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/recursion_btn_bg"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Toolbar Title"
            android:fontFamily="@font/open_sans_bold_italic"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etKnapsackWeight"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbarTop"
        android:layout_height="@dimen/fifty_five"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_marginRight="@dimen/ten"
        android:inputType="number"
        android:background="@drawable/etbackground"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/enter_bag_weight"
        android:padding="@dimen/fifteen"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp" />

    <EditText
        android:id="@+id/etObjectWeight"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_five"
        android:layout_below="@+id/etKnapsackWeight"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_marginRight="@dimen/ten"
        android:background="@drawable/etbackground"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/enter_object_weight"
        android:padding="@dimen/fifteen"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp" />

    <TextView
        android:id="@+id/tvHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etObjectWeight"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:fontFamily="@font/open_sans_bold_italic"
        android:hint="@string/enter_multiple_weight"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etObjectVal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_five"
        android:layout_below="@+id/tvHintText"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_marginRight="@dimen/ten"
        android:background="@drawable/etbackground"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/enter_object_value"
        android:padding="@dimen/fifteen"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp" />

    <TextView
        android:id="@+id/tvMultipleObjValHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etObjectVal"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:fontFamily="@font/open_sans_bold_italic"
        android:hint="@string/multiple_val"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvKnapSackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/fifteen"
        android:layout_marginRight="@dimen/fifteen"
        android:layout_below="@+id/tvMultipleObjValHint"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/dummy_text"
        android:textSize="@dimen/twenty"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnKnapSackZeroOne"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/fifty_five"
            android:layout_margin="@dimen/ten"
            android:layout_weight="0.5"
            android:fontFamily="@font/open_sans_bold_italic"
            android:text="Dynamic Programming"
            android:textSize="@dimen/ten_sp"
            app:backgroundTint="@color/dynamic_btn_bg" />

        <Button
            android:id="@+id/btnKnapSackGreedy"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/fifty_five"
            android:layout_margin="@dimen/ten"
            android:layout_weight="0.5"
            android:fontFamily="@font/open_sans_bold_italic"
            android:text="@string/by_recursion"
            android:textSize="@dimen/ten_sp"
            app:backgroundTint="@color/recursion_btn_bg"
            tools:ignore="SmallSp" />
    </LinearLayout>


</RelativeLayout>